--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,6 @@
   <a class="btn btn-primary" href="/huesped/crear">Dar de Alta Huesped</a>
   <a class="btn btn-primary" href="/habitaciones/reservar">Reservar habitación</a>
   <a class="btn btn-primary" href="/huesped/buscar">Buscar Huesped</a>
-  <a class="btn btn-primary" href="/habitacion/ocupar">Ocupar Habitación</a>
+  <a class="btn btn-primary" href="/habitaciones/ocupar">Ocupar Habitación</a>
 </div>
 
